pattern-1: add reloader

--- a/pattern-1/applicationsets/development/ap-southeast-2.yaml
+++ b/pattern-1/applicationsets/development/ap-southeast-2.yaml
@@ -18,7 +18,7 @@ spec:
       # Source of the application manifests
       source:
         repoURL: '{{ addon.repoURL }}'
-        targetRevision: '{{ addon.gitBranch }}'
+        targetRevision: '{{ addon.version }}'
       
         # helm specific config
         chart: '{{ addon.chart }}'
