--- a/pattern-1/applicationsets/development/ap-southeast-2.yaml
+++ b/pattern-1/applicationsets/development/ap-southeast-2.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: system-ap-southeast-2
+  name: system-ap-southeast-2-development
   namespace: argocd
 spec:
   generators:
@@ -12,19 +12,20 @@ spec:
         - path: "pattern-1/configs/development/ap-southeast-2.yaml"
   template:
     metadata:
-      name: '{{ addon.name }}'
+      name: '{{ helmCharts.name }}'
     spec:
       project: default
       # Source of the application manifests
       source:
-        repoURL: '{{ addon.repoURL }}'
-        targetRevision: '{{ addon.version }}'
+        repoURL: '{{ helmCharts.repoURL }}'
+        targetRevision: '{{ helmCharts.version }}'
       
         # helm specific config
-        chart: '{{ addon.chart }}'
+        chart: '{{ helmCharts.chart }}'
         helm:
-          releaseName: '{{ addon.name }}'
+          releaseName: '{{ helmCharts.name }}'
 
       destination:
         server: 'https://kubernetes.default.svc'
-        namespace: '{{ addon.namespace }}'
+        # server: 'ap-southeast-2-development'
+        namespace: '{{ namespace }}'
