--- a/pattern-1/configs/development/ap-southeast-2.yaml
+++ b/pattern-1/configs/development/ap-southeast-2.yaml
@@ -1,16 +1,13 @@
----
-- addon:
-    name: metrics-server
+namespace: kube-system
+helmCharts:
+  - name: metrics-server
     repoURL: https://kubernetes-sigs.github.io/metrics-server
     chart: metrics-server
     version: 3.12.2
     namespace: kube-system
-    gitBranch: main
 
-- addon:
-    name: reloader
+  - name: reloader
     repoURL: https://stakater.github.io/stakater-charts
     chart: stakater/reloader
-    version: 1.0.122
+    version: 1.1.0
     namespace: kube-system
-    gitBranch: main
